[project]
name = "finetune-code-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.45.0",
    "datasets>=3.2.0",
    "packaging>=24.2",
    "peft>=0.14.0",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
]
